--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -8,7 +8,7 @@
 }
 
 .columns {
-    background-color: #8FBC8F;
+    background-color: #8FBC8F; 
 }
 
 @media (min-width: 900px) {
@@ -20,7 +20,7 @@
 
     .columns > div > div {
         flex: 1;
-        margin-left: 32px;
+        margin-left: 32px
     }
 
     .columns > div > div:first-of-type {
