botton hover color light green

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,7 @@
  :root {
   /* colors */
   --link-color: #035fe6;
-  --link-hover-color: #136ff6;
+  --link-hover-color: #66f613;
   --background-color: #000;
   --overlay-background-color: #eee;
   --highlight-background-color: #ccc;
