--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,7 +17,7 @@
   --background-color: #000;
   --overlay-background-color: #eee;
   --highlight-background-color: #ccc;
-  --text-color: #199e14;
+  --text-color: #e76f51;
 
   /* fonts */
   --body-font-family: arial, helvetica, ubuntu, roboto, noto, sans-serif;
