--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -8,10 +8,10 @@
 }
 
 .columns {
-    background-color: #7ae99b;  
+    background-color: #7aa7e9;  
 }
 
-@media (min-width: 900px) {
+@media (min-width: 1200px) {
     .columns > div {
         display: flex;
         align-items: center;
